--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-particles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
