--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.473.0",
     "motion": "^12.0.0",
     "next": "15.1.5",
     "react": "^19.0.0",
